<resources>
    <string name="app_name">BattleshipMobile</string>
    <string name="spielername_eingeben">Bitte Spielernamen eingeben:</string>
    <string name="normal">Normal</string>
    <string name="schwierig">Schwierig</string>
    <string name="sehrschwierig">Sehr schwierig</string>
    <string name="spielername">Spieler</string>
    <string name="button_weiter">Weiter</string>
    <string name="button_vierer">Vierer</string>
    <string name="button_dreier">Dreier</string>
    <string name="button_zweier">Zweier</string>
    <string name="horizontal">Horizontal</string>
    <string name="vertikal">Vertikal</string>
    <string name="spielernameText">Spielername</string>
    <string name="gewonnen">Herzlichen Glückwunsch</string>
    <string name="gewonnen2">Du hast gewonnen!</string>
    <string name="hauptmenue">Hauptmenü</string>
    <string name="verloren">Du hast leider verloren</string>
    <string name="spieler">Spieler</string>
    <string name="anleitung">Spielanleitung</string>
    <string name="anleitung_start">Hauptmenü</string>
    <string name="anleitung_schiffesetzen">Schiffe setzen</string>
    <string name="anleitung_schiffesetzentext">Setze deine Schiffe per Drag und Drop ODER nutze den \"Zufällig setzen\"-Button, der zweite von links oben.</string>
    <string name="anleitung_schiffesetzentext2">Dein Feld zurücksetzen kannst du mit dem Button ganz oben links.</string>
    <string name="anleitung_schiffesetzentext3">Starten tust du das Spiel mit dem Button oben rechts.</string>
    <string name="anleitungtext">Wähle nach dem Klick auf Spiel starten, zwischen drei Spielmodi aus. Normal, Schwierig und sehr Schwierig.</string>
    <string name="dasspiel">Das Spiel</string>
    <string name="dasspieltext">Klicke ein Feld an, um zu schießen. Triffst du KEIN Schiffsteil, hast du keinen Versuch mehr und du musst mit WEITER bestätigen.
    Danach siehst du das Feld deines Gegners und kannst sehen, wie dieser gespielt hat. Bestätige dies wieder mit einem Klick auf WEITER.
    Du bist wieder an der Reihe. Färbt sich ein Feld nach einem Schuss braun, hast du eine Schiffsteil getroffen und darfst noch einmal schießen.
    Färben sich die getroffenen Schiffsteile grün, so hast du ein Schiff versenkt und darfst ebenfalls noch einmal schießen.
    Gewonnen hat derjenige, der zuerst alle Schiffe seines Gegners versenkt hat. ACHTUNG! Im sehr schwierigen Modus kannst du nicht sehen, wo du bereits hingeschossen hast!</string>
</resources>
