<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp">

    <TextView
        android:id="@+id/tv_spielername_eingeben"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/spielername_eingeben"
        android:textSize="18dp"
        android:textStyle="bold"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/label_spielername_eigeben"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:layout_marginTop="5dp"
        android:text="@string/spielername"
        android:textAlignment="center"
        android:inputType="text" />

    <Button
        android:id="@+id/button_spierlername_weiter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_weiter"
        android:layout_gravity="center"/>
</LinearLayout>