<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Anleitungsbildschirm">

    <ImageView
        android:id="@+id/hintergrund"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/grafik_anleitung"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="90dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/zurueck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="17dp"
        android:layout_marginEnd="161dp"
        android:layout_marginStart="161dp"
        android:text="@string/hauptmenue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_anleitung"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="173dp"
        android:layout_marginStart="173dp"
        android:layout_marginTop="16dp"
        android:text="@string/anleitung"
        android:textAllCaps="false"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_anleitungstart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="173dp"
        android:layout_marginStart="173dp"
        android:layout_marginTop="67dp"
        android:text="@string/anleitung_start"
        android:textAllCaps="true"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_schiffesetzen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="173dp"
        android:layout_marginStart="173dp"
        android:layout_marginTop="14dp"
        android:text="@string/anleitung_schiffesetzen"
        android:textAllCaps="true"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_start" />

    <TextView
        android:id="@+id/text_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:text="TextView"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/hintergrund"
        app:layout_constraintStart_toStartOf="@+id/hintergrund"
        app:layout_constraintTop_toBottomOf="@+id/tv_anleitungstart" />

    <TextView
        android:id="@+id/text_schiffesetzen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:text="TextView"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/hintergrund"
        app:layout_constraintStart_toStartOf="@+id/hintergrund"
        app:layout_constraintTop_toBottomOf="@+id/tv_schiffesetzen" />

    <TextView
        android:id="@+id/text_schiffesetzen2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:text="TextView"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/hintergrund"
        app:layout_constraintStart_toStartOf="@+id/hintergrund"
        app:layout_constraintTop_toBottomOf="@+id/text_schiffesetzen" />

    <TextView
        android:id="@+id/text_schiffesetzen3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:text="TextView"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/hintergrund"
        app:layout_constraintStart_toStartOf="@+id/hintergrund"
        app:layout_constraintTop_toBottomOf="@+id/text_schiffesetzen2" />

    <TextView
        android:id="@+id/tv_dasspiel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="173dp"
        android:layout_marginStart="173dp"
        android:layout_marginTop="14dp"
        android:text="@string/dasspiel"
        android:textAllCaps="true"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="@+id/hintergrund"
        app:layout_constraintStart_toStartOf="@+id/hintergrund"
        app:layout_constraintTop_toBottomOf="@+id/text_schiffesetzen3" />

    <TextView
        android:id="@+id/text_dasspiel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:text="TextView"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/hintergrund"
        app:layout_constraintStart_toStartOf="@+id/hintergrund"
        app:layout_constraintTop_toBottomOf="@+id/tv_dasspiel" />

</android.support.constraint.ConstraintLayout>